syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "ForgeQueueManipulateType.proto";

// CmdId: 659
// EnetChannelId: 0
// EnetIsReliable: true
// IsAllowClient: true
message ForgeQueueManipulateReq {
	uint32 forge_queue_id = 11;
	ForgeQueueManipulateType manipulate_type = 7;
}
