syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

enum ForgeQueueManipulateType {
	FORGE_QUEUE_MANIPULATE_TYPE_RECEIVE_OUTPUT = 0;
	FORGE_QUEUE_MANIPULATE_TYPE_STOP_FORGE = 1;
}
